[gd_scene load_steps=3 format=3 uid="uid://cuc767ok22fwd"]

[ext_resource type="Script" uid="uid://ch3pmc7ysl7xq" path="res://intro/steps.gd" id="1_7m3qw"]
[ext_resource type="Theme" uid="uid://djf2yc1tmc0u8" path="res://ui/themes/control_theme_main_menu.tres" id="2_lpybo"]

[node name="ProgressUI" type="Control"]
light_mask = 0
clip_contents = true
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_lpybo")
script = ExtResource("1_7m3qw")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1342.0
grow_horizontal = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2

[node name="LoadingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Welcome!"

[node name="ProgressBarUI" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
min_value = 0.01
value = 0.01

[node name="NumberOfEntitiesUI" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Please wait."

[node name="ProgressNotesUI" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.641934, 0.641934, 0.641934, 1)
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
